--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Luxury Real Estate, The Home of Home Search, Marketing Your Home, Need a home loan?, Dream House? Easy!, 140, 66, 43, 60, Our Last Projects, Contact Us, INTUITIVE">
     <meta name="description" content="">
     <title>Home</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="style.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
