--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="keywords" content="Luxury Real Estate, The Home of Home Search, Marketing Your Home, Need a home loan?, Dream House? Easy!, 140, 66, 43, 60, Our Last Projects, Contact Us, INTUITIVE">
     <meta name="description" content="">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" media="screen">
-<link rel="stylesheet" href="Home.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <link rel="stylesheet" href="./src/css/style.css" media="screen">
+<link rel="stylesheet" href="./src/css/Home.css" media="screen">
+    <script class="u-script" type="text/javascript" src="src/js/jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="src/js/nicepage.js" defer=""></script>
      <!-- Load Type.js library from the CDN -->
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js">
+    <script >
       $(function(){
         $(".typed").typed({
           strings: ["Typing"],
