--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                       <h3 class="u-text u-text-1">Selected Projects<br>
                       </h3>
-                      <h2 class="u-text u-text-palette-1-base u-text-2">Marketing Your Home</h2>
+                      <h2 class="u-text u-text-palette-1-base ">Machine Learning</h2>
                       <p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p><span class="u-align-left u-icon u-icon-circle u-palette-1-base u-text-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 492.004 492.004" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a37f"></use></svg><svg class="u-svg-content" viewBox="0 0 492.004 492.004" x="0px" y="0px" id="svg-a37f" style="enable-background:new 0 0 492.004 492.004;"><g><g><path d="M484.14,226.886L306.46,49.202c-5.072-5.072-11.832-7.856-19.04-7.856c-7.216,0-13.972,2.788-19.044,7.856l-16.132,16.136    c-5.068,5.064-7.86,11.828-7.86,19.04c0,7.208,2.792,14.2,7.86,19.264L355.9,207.526H26.58C11.732,207.526,0,219.15,0,234.002    v22.812c0,14.852,11.732,27.648,26.58,27.648h330.496L252.248,388.926c-5.068,5.072-7.86,11.652-7.86,18.864    c0,7.204,2.792,13.88,7.86,18.948l16.132,16.084c5.072,5.072,11.828,7.836,19.044,7.836c7.208,0,13.968-2.8,19.04-7.872    l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z"></path>
 </g>
@@ -207,8 +207,7 @@
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
-                    <div class="u-container-layout u-container-layout-4"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 470 470" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-64c7"></use></svg><svg class="u-svg-content" viewBox="0 0 470 470" id="svg-64c7"><g><path d="m429.591,418.378l-62.223-150.218c-1.585-3.826-5.972-5.645-9.799-4.059s-5.645,5.973-4.059,9.799l56.251,135.801-51.309-14.867c-3.368-0.977-6.965,0.513-8.656,3.586l-25.769,46.793-60.357-145.716c69.663-13.434 122.447-74.853 122.447-148.378 0.001-83.327-67.79-151.119-151.117-151.119s-151.119,67.792-151.119,151.119c0,33.751 11.124,64.951 29.896,90.133l-73.368,177.126c-1.103,2.664-0.582,5.724 1.341,7.872 1.922,2.148 4.907,3.004 7.676,2.202l60.533-17.541 30.4,55.207c1.324,2.403 3.847,3.882 6.568,3.882 0.138,0 0.277-0.004 0.416-0.011 2.879-0.16 5.411-1.955 6.515-4.619l58.136-140.353c1.585-3.827-0.232-8.214-4.059-9.799-3.827-1.585-8.214,0.232-9.799,4.059l-52.165,125.936-25.767-46.793c-1.692-3.073-5.291-4.563-8.657-3.586l-51.308,14.867 64.397-155.469c27.598,29.52 66.86,48.005 110.364,48.005 4.491,0 8.933-0.209 13.325-0.594l67.818,163.727c1.103,2.664 3.636,4.459 6.514,4.618 0.14,0.008 0.278,0.012 0.417,0.012 2.721,0 5.244-1.479 6.567-3.882l30.401-55.207 60.533,17.541c2.771,0.803 5.753-0.054 7.676-2.202 1.923-2.148 2.443-5.208 1.34-7.872zm-330.71-267.259c2.84217e-14-75.056 61.063-136.119 136.119-136.119 75.056,0 136.118,61.063 136.118,136.119s-61.062,136.118-136.118,136.118c-75.056,0-136.119-61.062-136.119-136.118z"></path><path d="m321.659,122.961c-0.863-2.658-3.135-4.616-5.892-5.079l-50.467-8.469-23.649-45.379c-1.292-2.479-3.855-4.034-6.651-4.034-2.795,0-5.359,1.555-6.651,4.034l-23.65,45.379-50.466,8.469c-2.757,0.462-5.028,2.42-5.892,5.079-0.864,2.659-0.178,5.577 1.781,7.572l35.85,36.515-7.54,50.614c-0.412,2.765 0.748,5.529 3.01,7.173 2.26,1.642 5.249,1.891 7.751,0.646l45.807-22.812 45.806,22.812c1.059,0.527 2.203,0.787 3.343,0.787 1.557,0 3.104-0.484 4.409-1.432 2.262-1.644 3.422-4.408 3.01-7.173l-7.539-50.614 35.85-36.516c1.958-1.995 2.644-4.913 1.78-7.572zm-50.951,36.244c-1.648,1.679-2.413,4.033-2.066,6.359l5.97,40.074-36.268-18.061c-1.054-0.524-2.198-0.787-3.344-0.787-1.145,0-2.291,0.262-3.343,0.787l-36.268,18.061 5.97-40.074c0.347-2.326-0.418-4.681-2.066-6.359l-28.385-28.912 39.957-6.706c2.32-0.389 4.323-1.844 5.41-3.93l18.725-35.929 18.725,35.93c1.088,2.086 3.09,3.541 5.41,3.93l39.958,6.706-28.385,28.911z"></path><path d="m348.612,158.684c-4.107-0.549-7.877,2.343-8.42,6.45-6.957,52.507-52.18,92.104-105.192,92.104-58.514,0-106.119-47.604-106.119-106.119s47.605-106.119 106.119-106.119c53.013,0 98.235,39.596 105.192,92.104 0.543,4.107 4.32,7.001 8.42,6.45 4.105-0.544 6.994-4.314 6.449-8.42-7.94-59.936-59.555-105.134-120.061-105.134-66.785,0-121.119,54.333-121.119,121.119s54.334,121.118 121.119,121.118c60.506,0 112.121-45.198 120.062-105.134 0.544-4.105-2.344-7.875-6.45-8.419z"></path>
-</g></svg></span>
+                    <div class="u-container-layout u-container-layout-4"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-3">
                       <h3 class="u-text u-text-6"><a href="blog/post-2.html">Fraud Detection in Medical</a></h3>
                       <p class="u-text u-text-grey-30 u-text-7">
                         Determine the home's value in the current market for a listing price.</p>
@@ -232,7 +231,24 @@
     </section>
    
   
- 
+    <section class="u-black u-clearfix u-section-4" id="data visualiztion">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
+              <div class="u-size-20 u-size-40-md">
+                <div class="u-layout-row">
+                  <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-layout-cell-1">
+                    <div class="u-container-layout u-valign-middle-md u-container-layout-1">
+                      <h3 class="u-text u-text-1">Selected Projects<br>
+                      </h3>
+                      <h2 class="u-text u-text-palette-1-base">Data Mining and Visualiztion</h2>
+                      <p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
+                                            Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p>
+                                           
+                    </div>
+                  </div>
+                </div>
+              </div>
+    </section>
     
     <section class="u-black u-clearfix u-section-8" id="carousel_fa10">
       <div class="u-clearfix u-sheet u-sheet-1">
