--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <body data-home-page="index.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-43be"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://audreyxyz.github.io" class="u-image u-logo u-image-1">
-          <img src="./src/images/logo.png" class="u-logo-image u-logo-image-1">
+          <img src="./src/images/logo.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -244,7 +244,18 @@
                       <h2 class="u-text u-text-palette-1-base">Data Mining and Visualiztion</h2>
                       <p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p>
-                                           
+                      <div style="width: auto;">
+                        <div class="project" >
+                          <div class="project-img">
+                          <img  style="width:80%;height: auto;" src="src/images/sentiA/CommentHotMap.png"></div>
+                          <div class="project-description">iohuihugg</div>
+                        </div>
+                        <div class="project">344</div>
+                        <div class="project" >235</div>
+                      </div> 
+                                            
+
+
                     </div>
                   </div>
                 </div>
