--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   </h3>
                   <img src="src/images/logo.png" class=	"w-32" width="430px" id="memoji32">
                   <!-- <h2 class="u-text u-text-palette-1-base u-text-2">The Home of Home Search</h2> -->
-                  <p class="u-text u-text-grey-30 u-text-3">Born in raised in Southern Taiwan, I am now a student at Peking University. 
+                  <p class="u-text description u-text-3">Born in raised in Southern Taiwan, I am now a student at Peking University. 
                     My academic life focuses on solving real world problems with data/information science technique. For example, I tackle supply chain problem 
                     with machine learning models. 
                     You can see some of my work in the following section and in the "selected projects" page as well.
@@ -164,7 +164,7 @@
                     <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                       <h3 class="u-text u-text-1">Selected Projects<br>
                       </h3>
-                      <h2 class="u-text u-text-palette-1-base ">Machine Learning</h2>
+                      <h2 class="u-text section-title ">Machine Learning</h2>
                       <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
                     </div>
@@ -178,7 +178,7 @@
                     <div class="u-container-layout u-container-layout-3"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-2">
                      </span>
                       <h3 class="u-text u-text-4"> <a href="blog/post-1.html">Data-Driven Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
-                      <p class="u-text u-text-grey-30 u-text-5">
+                      <p class="u-text description u-text-5">
                         This case study focuses on establishing an efficient (R, S) inventory management model for the beverage supply chain, considering 
                         multiple stock-keeping units(SKUs) and dynamic shifts in demand. The primary 
                         objective is to determine safety stock levels (S) for each SKU to ensure the stability 
@@ -195,7 +195,7 @@
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
                     <div class="u-container-layout u-container-layout-4"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-3">
                       <h3 class="u-text u-text-6"><a href="blog/post-2.html">Fraud Detection in Medical</a></h3>
-                      <p class="u-text u-text-grey-30 u-text-7">
+                      <p class="u-text description ">
                         Determine the home's value in the current market for a listing price.</p>
                         <button class="pink-button" role="button">Kaggle Page</button>
                     </div>
@@ -204,7 +204,7 @@
                     <div class="u-container-layout u-container-layout-5"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-4">
                       <h3 class="u-text u-text-8"><a href="blog/post-3.html">Data Analysis on Single Origin Coffee</a></h3>
                       <!-- HTML !-->
-                      <p class="u-text u-text-grey-30 u-text-9">Determine the home's value in the current market for a listing price.</p>
+                      <p class="u-text description">Determine the home's value in the current market for a listing price.</p>
                       <button class="pink-button" role="button">Kaggle Page</button>
                     </div>
                   </div>
@@ -226,14 +226,16 @@
                     <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                       <h3 class="u-text u-text-1">Selected Projects<br>
                       </h3>
-                      <h2 class="u-text u-text-palette-1-base">Data Mining and Visualiztion</h2>
-                      <p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
+                      <h2 class="u-text section-title">Data Mining and Visualization</h2>
+                      <p class="u-text description u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p>
                       <div style="width: auto;">
                         <div class="project" >
                           <div class="project-img">
                           <img  style="width:80%;height: auto;" src="src/images/sentiA/CommentHotMap.png"></div>
-                          <div class="project-description">iohuihugg</div>
+                          <div class="project-description">
+                            <h1>HOHU</h1>
+                            iohuihugg</div>
                         </div>
                         <div class="project">344</div>
                         <div class="project" >235</div>
