Update index.html(add social media links/timeline)

--- a/index.html
+++ b/index.html
@@ -144,11 +144,18 @@
                       <span class="social-link-text">Medium</span>
                     </div>
                     <div class="social-item" ">
-                      <a href="/Youtube" >
+                      <a href="/linkedin" >
                           <i class="fa fa-linkedin-square" aria-hidden="true"></i>     
                       </a>
                       <span class="social-link-text">LinkedIn</span>
                     </div>
+                    <div class="social-item" ">
+                      <a href="/linkedin" >
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                      </a>
+                      <span class="social-link-text">Gmail</span>
+                    </div>
+                   
                     </div>
                     <!--p class="u-text u-text-grey-30 u-text-4">Besides my studying in school, I enjoy reading, watching movies and traveling as well.
                       And I messed around with my cameras a lot, you can browse photos I took in the "Gallery" page. There are also fil,I wrote in the "Blog" pages(It's mostly in Chinese)
@@ -160,16 +167,20 @@
                   <div class="u-container-layout u-container-layout-3 resume-block" >
                     <img class="timeline" src="src/logos/book.png" style="width: 40px;margin:12px;">
                    <h3 >Education</h3>
-                  <div class="timeline">
-                   <ol> Peking University</ol>
-                   <li >Yuan Pei College (Liberal Arts College)</li>
+                  <div class="timeline-list">
+                   <ol class="timeline-item"> Peking University</ol>
+                   <ol class="timeline-item">Yuan Pei College (Liberal Arts College)</ol>
+                   <ol class="timeline-item">  </ol>
+                   <ol class="timeline-item">   hjg</ol>
                   </div>
                   </div>
                   <div class="u-container-layout u-container-layout-3 resume-block" >
                     <img class="" src="src/logos/light-bulb.png" style="width: 40px; margin:12px;">
                     <h3 >Experiences</h3>
-                    <ol class="timeline-list" > Peking University</ol>
-                    <li class="timeline-list">Yuan Pei College (Liberal Arts College)</li>
+                    <div class="timeline-list">
+                    <ol class="timeline-item" > Peking University</ol>
+                    <ol class="timeline-item">Yuan Pei College (Liberal Arts College)</ol>
+                    </div>
                   </div>
                  </div>
                  
@@ -203,9 +214,9 @@
               <div class="u-size-40 u-size-60-md">
                 <div class="u-layout-col">
                   <div class="u-container-style u-layout-cell u-right-cell u-size-40 u-layout-cell-3">
-                    <div class="u-container-layout u-container-layout-3"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-2">
+                    <div class="u-container-layout u-container-layout-3">
                      </span>
-                      <h3 class="u-text u-text-4"> <a href="blog/post-1.html">Data-Driven Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
+                      <h3 class="u-text"> <a href="blog/post-1.html">Data-Driven Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
                       <p class="u-text description u-text-5">
                         This case study focuses on establishing an efficient (R, S) inventory management model for the beverage supply chain, considering 
                         multiple stock-keeping units(SKUs) and dynamic shifts in demand. The primary 
@@ -221,7 +232,7 @@
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
-                    <div class="u-container-layout u-container-layout-4"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-3">
+                    <div class="u-container-layout u-container-layout-3">
                       <h3 class="u-text u-text-6"><a href="blog/post-2.html">Fraud Detection in Medical</a></h3>
                       <p class="u-text description ">
                         Determine the home's value in the current market for a listing price.</p>
@@ -229,7 +240,7 @@
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-5">
-                    <div class="u-container-layout u-container-layout-5"><span class="u-icon u-icon-circle u-text-palette-1-base u-icon-4">
+                    <div class="u-container-layout u-container-layout-5">
                       <h3 class="u-text u-text-8"><a href="blog/post-3.html">Data Analysis on Single Origin Coffee</a></h3>
                       <!-- HTML !-->
                       <p class="u-text description">Determine the home's value in the current market for a listing price.</p>
