--- a/index.html
+++ b/index.html
@@ -170,16 +170,26 @@
                   <div class="timeline-list">
                    <ol class="timeline-item"> Peking University</ol>
                    <ol class="timeline-item">Yuan Pei College (Liberal Arts College)</ol>
-                   <ol class="timeline-item">  </ol>
-                   <ol class="timeline-item">   hjg</ol>
+                   <ol class="timeline-item">Major:Big Data Management and Application  </ol>
+                   <ol class="timeline-item">Minor: Sociology</ol>
                   </div>
                   </div>
                   <div class="u-container-layout u-container-layout-3 resume-block" >
                     <img class="" src="src/logos/light-bulb.png" style="width: 40px; margin:12px;">
                     <h3 >Experiences</h3>
                     <div class="timeline-list">
-                    <ol class="timeline-item" > Peking University</ol>
-                    <ol class="timeline-item">Yuan Pei College (Liberal Arts College)</ol>
+                      <ol class="timeline-item">Undergraduate research assistant with Prof.Meng Fan</ol>
+                    <ol class="timeline-item" >PM intern at Volkswagen Group China R&D department</ol>
+                    <ol class="timeline-item">Undergraduate research assistant with Prof.LiGuangJian</ol>
+                    </div>
+                  </div>
+                  <div class="u-container-layout u-container-layout-3 resume-block" >
+                    <img class="" src="src/logos/light-bulb.png" style="width: 40px; margin:12px;">
+                    <h3 >Extracurricular</h3>
+                    <div class="timeline-list">
+                      <ol class="timeline-item">Photography</ol>
+                    <ol class="timeline-item" >Coffee Brewing</ol>
+                    <ol class="timeline-item">Film review</ol>
                     </div>
                   </div>
                  </div>
