--- a/index.html
+++ b/index.html
@@ -243,9 +243,11 @@
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
                     <div class="u-container-layout u-container-layout-3">
-                      <h3 class="u-text u-text-6"><a href="blog/post-2.html">Fraud Detection in Medical</a></h3>
+                      <h3 class="u-text u-text-6"><a href="blog/post-2.html"> Healthcare Provider Fraud Detection and Data Analysis</a></h3>
                       <p class="u-text description ">
-                        Determine the home's value in the current market for a listing price.</p>
+                        Unraveling the complexities of the U.S. medical system, my project employs advanced methodologies, 
+                        including Random Forest, PCA, and innovative feature engineering. Achieving an outstanding 85% correction on the testing set, the project showcases not 
+                        only the sophistication of the techniques employed but also their real-world effectiveness.</p>
                         <button class="pink-button" role="button">Kaggle Page</button>
                     </div>
                   </div>
@@ -276,8 +278,11 @@
                       <h3 class="u-text u-text-1">Selected Projects<br>
                       </h3>
                       <h2 class="u-text section-title">Data Mining and Visualization</h2>
-                      <p class="u-text description u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
-                                            Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p>
+                      <p class="u-text description u-text-3">
+                        Data Mining is the process of discovering patterns and relationships within large datasets, uncovering valuable insights that may not be apparent through conventional analysis. 
+                        By extracting knowledge from raw data, it enables informed decision-making and strategic planning. On top of that, Data Visualization transforms complex datasets into intuitive 
+                        visual representations. Charts, graphs, and interactive visuals make it easier for individuals to grasp patterns, trends, and outliers. Visualization bridges the gap between raw data and actionable insights, promoting better comprehension and communication.
+                      </p>
                       <div style="width: auto;">
                         <div class="project" >
                           <div class="project-img">
