--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   <div class="u-container-style u-layout-cell u-right-cell u-size-40 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                      </span>
-                      <h3 class="u-text"> <a href="blog/post-1.html">Data-Driven Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
+                      <h3 class="u-text"> <a href="https://www.overleaf.com/read/kzpnpqjkrfpb#ecbcc8">Data-Driven Inventory Optimization with (R,S) model in Beverage Industry: A Case Study</h3></a>
                       <p class="u-text description u-text-5">
                         This case study focuses on establishing an efficient (R, S) inventory management model for the beverage supply chain, considering 
                         multiple stock-keeping units(SKUs) and dynamic shifts in demand. The primary 
