--- a/index.html
+++ b/index.html
@@ -243,20 +243,20 @@
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
                     <div class="u-container-layout u-container-layout-3">
-                      <h3 class="u-text u-text-6"><a href="https://www.kaggle.com/code/theysaynounderscore/fraud-detection"> Healthcare Provider Fraud Detection and Data Analysis</a></h3>
+                      <h3 class="u-text u-text-6"><a href="https://www.kaggle.com/code/theysaynounderscore/fraud-detection-on-medical-data?scriptVersionId=155749868"> Healthcare Provider Fraud Detection and Data Analysis</a></h3>
                       <p class="u-text description ">
                         Unraveling the complexities of the U.S. medical system, my project employs advanced methodologies, 
                         including Random Forest, PCA, and innovative feature engineering. Achieving an outstanding 85% correction on the testing set, the project showcases not 
                         only the sophistication of the techniques employed but also their real-world effectiveness.</p>
-                        <button class="pink-button" heref="https://www.kaggle.com/code/theysaynounderscore/fraud-detection" role="button">Kaggle Page</button>
+                        <button class="pink-button"  role="button" heref="https://www.kaggle.com/code/theysaynounderscore/fraud-detection-on-medical-data?scriptVersionId=155749868" role="button">Kaggle Page</button>
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-5">
                     <div class="u-container-layout u-container-layout-5">
-                      <h3 class="u-text u-text-8"><a href="blog/post-3.html">Data Analysis on Single Origin Coffee</a></h3>
+                      <h3 class="u-text u-text-8"><a href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Data Analysis of Housing in Beijing</a></h3>
                       <!-- HTML !-->
                       <p class="u-text description">Determine the home's value in the current market for a listing price.</p>
-                      <button class="pink-button" role="button">Kaggle Page</button>
+                      <button class="pink-button" role="button" href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Kaggle Page</button>
                     </div>
                   </div>
                 </div>
