--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                   <img class="" src="src/logos/light-bulb.png" style="width: 40px; margin:12px;">
                   <h3>Experiences</h3>
                   <div class="timeline-list">
-                    <ol class="timeline-item">Undergraduate research assistant with Prof.Meng Fan</ol>
+                    <ol class="timeline-item">Undergraduate thesis: Graph Neural Network-Based Blockchain Transaction  Analysis </ol>
                     <ol class="timeline-item">PM intern at Volkswagen Group China R&D department</ol>
-                    <ol class="timeline-item">Undergraduate research assistant with Prof.LiGuangJian</ol>
+                    <ol class="timeline-item">Third Prize: National Conference on Supply Chain and Operation Management: Data-driven competition</ol>
                   </div>
                 </div>
                 <div class="u-container-layout u-container-layout-3 resume-block">
@@ -331,11 +331,18 @@
                       In this project, I collect data from DouBan, Chinese most popular review platform
 
                     </div>
-                    <button  role="button" style="width: fit-content;text-align: center;">Learn more</button>
+                    <button role="button" style="width: fit-content;text-align: center;">Learn more</button>
                   </div>
                   <div class="project">
                     <div class="project-description">
-                      <h3>Data Visualization and Analysis on NLP Publications</h3>
+                      <h3>Data Visualization and Analysis on NLP Publications
+                      </h3>
+                      The team used OpenAlex API to get data about language models and present visualization with d3.js
+                      I am responsible for the data collecting and the visualization of three graphs (the 4th, 5th, and
+                      the 6th presented on the website)
+                      <button href="https://civugd.github.io/d3project/" role="button"
+                        style="width: fit-content;text-align: center;color:black">Learn
+                        more</button>
                     </div>
                   </div>
                   <div class="project">
