--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </p>
                 <div class="social-media-links">
                   <div class="social-item">
-                    <a href="/">
+                    <a href="https://github.com/audreyhsiao?tab=repositories">
                       <div class="transition-all">
                         <i class="fa fa-github-square" aria-hidden="true"></i>
                       </div>
@@ -156,7 +156,7 @@
                   </div>
 
                   <div class="social-item">
-                    <a href="/medium">
+                    <a href="https://autographxyz.medium.com/">
                       <div class="transition-all">
                         <i class="fa fa-medium" aria-hidden="true"></i>
                       </div>
@@ -164,7 +164,7 @@
                     <span class="social-link-text">Medium</span>
                   </div>
                   <div class="social-item" ">
-                      <a href=" /linkedin">
+                      <a href=" https://www.linkedin.com/in/you-zhu-xiao-2b6551183/">
                     <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <span class="social-link-text">LinkedIn</span>
@@ -198,9 +198,11 @@
                   <img class="" src="src/logos/light-bulb.png" style="width: 40px; margin:12px;">
                   <h3>Experiences</h3>
                   <div class="timeline-list">
-                    <ol class="timeline-item">Undergraduate thesis: Graph Neural Network-Based Blockchain Transaction  Analysis </ol>
+                    <ol class="timeline-item">Undergraduate thesis: Graph Neural Network-Based Blockchain Transaction
+                      Analysis </ol>
                     <ol class="timeline-item">PM intern at Volkswagen Group China R&D department</ol>
-                    <ol class="timeline-item">Third Prize: National Conference on Supply Chain and Operation Management: Data-driven competition</ol>
+                    <ol class="timeline-item">Third Prize: National Conference on Supply Chain and Operation Management:
+                      Data-driven competition</ol>
                   </div>
                 </div>
                 <div class="u-container-layout u-container-layout-3 resume-block">
