--- a/index.html
+++ b/index.html
@@ -224,6 +224,41 @@
     </div>
     </div>
   </section>
+
+  <section class="u-black u-clearfix u-section-3">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
+        <p class="u-text description section-title u-text-3" style="color: #ff2e63">
+        <h3>I am specifically interested in deep learning and machine learning applications in business and
+          management.
+        </h3>
+        </p>
+        <ol class="u-text description u-text-5"><br>1. Predictive Insights and Decision Support: <br>Management
+          theories are
+          mostly based on assumptions
+          such as stable costs or demands that obey certain distribution functions. However, corporations
+          only held data such as historical sales but not clear variables that could easily fit in
+          management models. Traditionally, corporations adopt statistical approaches such as Sample Average
+          Approximation (SAA) to bridge the gap between theory and practice. Deep learning could forecast
+          future trends, behaviors, and outcomes with a higher degree of accuracy. Businesses can leverage
+          these insights and traditional business models to make proactive decisions.
+        </ol><br>
+        <ol class="u-text description u-text-5">
+          2. Debiasing and feature engineering:<br> Machine learning models can analyze transaction data and
+          identify patterns indicative of fraudulent activity. However, the datasets used in fraud detection
+          are often unbalanced. For instance, my undergraduate thesis focuses on fraud detection and
+          analysis
+          in Bitcoin data, including wallets and transactions. I faced challenges since those data are
+          composed of hidden features and are often labeled as unknown (rather than illicit or licit) due to
+          the decentralization principles of blockchain currencies.
+        </ol>
+
+
+      </div>
+    </div>
+  </section>
+
+
   <section class="u-black u-clearfix u-section-3" id="carousel_6e36">
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
@@ -236,6 +271,7 @@
                     <h3 class="u-text u-text-1">Selected Projects<br>
                     </h3>
                     <h2 class="u-text section-title ">Machine Learning</h2>
+
                     <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
                   </div>
@@ -349,7 +385,7 @@
                   </div>
                   <div class="project">
                     <div class="project-description">
-                      <h1>Ｗeb design project Analysis </h1>
+                      <h1>Ｗeb design project </h1>
                     </div>
                   </div>
                 </div>
