--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
                 href="index.html" style="padding: 10px 20px;">Home</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
-                href="About.html" style="padding: 10px 20px;">About</a></li>
+                href="#about" style="padding: 10px 20px;">About</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
-                href="Gallery.html">Gallery</a></li>
+                href="#projects">Projects</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
-                href="Contact.html" style="padding: 10px 20px;">Contact</a></li>
+                href="#contact" style="padding: 10px 20px;">Contact</a></li>
 
           </ul>
         </div>
@@ -131,7 +131,7 @@
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
-                <h3 class="u-text u-text-1">About me<br>
+                <h3 id="about" class="u-text u-text-1">About me<br>
                 </h3>
                 <div>
                   <img src="src/images/logo.png" class="w-32" width="430px" id="avatar">
@@ -268,7 +268,7 @@
               <div class="u-layout-row">
                 <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-layout-cell-1">
                   <div class="u-container-layout u-valign-middle-md u-container-layout-1">
-                    <h3 class="u-text u-text-1">Selected Projects<br>
+                    <h3 class="u-text u-text-1" id="projects">Selected Projects<br>
                     </h3>
                     <h2 class="u-text section-title ">Machine Learning</h2>
 
