--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             <div class=" u-container-layout " style=" padding-left: 5%;
               padding-top:5%;padding-bottom: 10%;
 		padding-right: 5%;
-    flex:100%; max-height: 100%; back">
+    flex:100%; 
+    max-height: 100%;">
               <h3 class="u-text u-text-1 animate fadeInDown">About me<br>
               </h3>
               <div class="fadeInDown" style="display: flex;
