--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="./src/css/Home.css" media="screen">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="./src/css/animated.css" media="screen">
+  <link id="u-theme-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+  <link id="u-page-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 
-
-  <!--add icon into the webpage-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <script class="u-script" type="text/javascript" src="src/js/jquery.js" "></script>
@@ -42,11 +44,6 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<link id="u-theme-google-font" rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-<link id="u-page-google-font" rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 
 
 <script type="application/ld+json">{
@@ -222,7 +219,8 @@
                   </ul>
                   <h6 class="skill-bullet">Applicable Concepts </h6>
                   <ul>
-                    <li>Object-Oriented Programming, Data Visualization and Analyze, Web development, Ensemble learning</li>
+                    <li>Object-Oriented Programming, Data Visualization and Analyze, Web development, Ensemble learning
+                    </li>
                   </ul>
                 </div>
 
