--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" href="./src/css/style.css" media="screen">
-  <link rel="stylesheet" href="./src/css/Home.css" media="screen">
+  <link rel="stylesheet" href="src/css/style.css" media="screen">
+  <link rel="stylesheet" href="src/css/Home.css" media="screen">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="./src/css/animated.css" media="screen">
+  <link rel="stylesheet" href="src/css/animated.css" media="screen">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet"
