--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <script class="u-script" type="text/javascript" src="src/js/jquery.js" "></script>
-    <script class=" u-script" type="text/javascript" src="src/js/nicepage.js"></script>
+  <script class="u-script" type="text/javascript" src="src/js/jquery.js"></script>
+  <script class=" u-script" type="text/javascript" src="src/js/nicepage.js"></script>
   <!-- Load Type.js library from the CDN -->
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js" defer=""></script>
   <script>
@@ -46,16 +46,16 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 
-<script type="application/ld+json">{
+  <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
 		"logo": "src/images/logo.png"
 }</script>
-<meta name="theme-color" content="#478ac9">
-<meta property="og:title" content="Home">
-<meta property="og:type" content="website">
-<meta data-intl-tel-input-cdn-path="intlTelInput/">
+  <meta name="theme-color" content="#478ac9">
+  <meta property="og:title" content="Home">
+  <meta property="og:type" content="website">
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -123,7 +123,7 @@
                  justify-content: center; 
                 align-items:center;
                 padding: 3%;">
-                <img src="src/images/logo.png" " width=" 50%" id="avatar">
+                <img src="src/images/logo.png" width=" 50%" id="avatar">
               </div>
               <p class="u-text description u-text-3 about">I am currently a Master’s of Computer Science at Rice
                 University with have
@@ -155,15 +155,15 @@
                   </a>
                   <span class="social-link-text">Medium</span>
                 </div>
-                <div class="social-item" ">
-                      <a href=" https://www.linkedin.com/in/audrey-hsiao/">
-                  <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                <div class="social-item">
+                  <a href=" https://www.linkedin.com/in/audrey-hsiao/">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                   </a>
                   <span class="social-link-text">LinkedIn</span>
                 </div>
-                <div class="social-item" ">
-                      <a href=" audreyyj13@gmail.com">
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                <div class="social-item">
+                  <a href=" mailto:audreyyj13@gmail.com">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
                   </a>
                   <span class="social-link-text">Gmail</span>
                 </div>
@@ -230,19 +230,18 @@
 
   </section>
 
-  <div class="wrapper" id="inshort">
+  <!-- <div class="wrapper" id="inshort">
     <div class="glassbox">
 
-      <h2>I am specifically interested in computer science applications in business and
-        management.</h2>
+      <h6>I am specifically interested in computer science applications in business and
+        management.</h6>
 
     </div>
 
-    </h2>
 
 
-  </div>
 
+  </div> -->
   <div class="wrapper" id="selected-projects">
     <div class=" section-title">
       <h2 class="u-text u-text-1">Selected Projects<br>
@@ -253,25 +252,31 @@
       My academic journey began at Peking University’s YuanPei College, where I majored in Data Science. My love for
       integrating technology with diverse fields led me to explore
       groundbreaking projects, such as using graph neural networks(GCN and GAT) for anomaly detection in Bitcoin during
-      my undergraduate thesis.
+      my undergraduate thesis.</p>
 
-      Recognizing that emerging technologies like AI are deeply rooted in fundamental computer science principles, I am
+    <p class="u-text description"> Recognizing that emerging technologies like AI are deeply rooted in fundamental
+      computer science principles, I
+      am
       currently pursuing a Master’s degree in Computer Science at Rice University. Here, I am diving into core areas
-      such as database implementation network and operating system.
+      such as database implementation network and operating system.</p>
 
 
     </p>
     <div class="box">
       <div class="description">
-        <h2>Sentimental Analysis on reviews of the TV series "Empresses in the Palace"</h2>
-        <p>In this project, I collect data from DouBan, Chinese most popular review platform
+        <h2>Database System Implementation</h2>
+        <p>
+          Design and implement a database system from scratch in a team of 2 using C++, including the development of a
+          LRU (Least Recently
+          Used) buffer manager, implementing record management, and managing file I/O on tables. Build and optimize the
+          system to operate on Linux, focusing on efficient data storage and retrieval mechanisms
         </p>
       </div>
 
     </div>
     <div class="box">
       <div class="description">
-        <h2></h2>
+        <h2>Sentimental Analysis on reviews of the TV series "Empresses in the Palace"</h2>
         <p>The team used OpenAlex API to get data about language models and present visualization with d3.js I am
           responsible for the data collecting and the visualization of three graphs (the 4th, 5th, and the 6th presented
           on the website)</p>
@@ -280,9 +285,13 @@
     </div>
     <div class="box">
       <div class="description">
-        <h2>Data Visualization and Analysis on NLP Publications</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A sunt rem magni quasi tempore alias nostrum
-          mollitia delectus cupiditate hic unde minima quis officiis, quidem quae quisquam, aperiam porro fugiat?</p>
+        <h2>Abnormal Detection Method on Blockchain with Graph Neural Networks (GNNs) </h2>
+        <p> Proposed and experimented a new method integrating Random Forest and Graph Attention Network with Pytorch on
+          bitcoin datasets
+          to detect abnormal transactions flows and illicit wallet address inside the network. Increased 40% of Recall
+          Rate and 15% Precision on
+          detecting illicit wallet nodes</li>
+        </p>
       </div>
 
     </div>
